<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAFBF1"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- HEADER -->
        <TextView
            android:id="@+id/detail_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_title"
            android:textColor="#2E5E4E"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp" />

        <!-- CONTENT -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">

            <!-- NAMA OBAT -->
            <TextView
                android:id="@+id/tv_nama_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_medicine_name"
                android:textColor="#2E5E4E"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:layout_marginBottom="20dp" />

            <!-- WAKTU -->
            <TextView
                android:id="@+id/tv_waktu_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_time_label"
                android:textColor="#2E5E4E"
                android:textSize="20sp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/tv_waktu_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_time_value"
                android:textColor="#2E5E4E"
                android:textSize="20sp"
                android:layout_marginBottom="30dp" />

            <!-- CATATAN -->
            <TextView
                android:id="@+id/tv_catatan_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_note_label"
                android:textColor="#2E5E4E"
                android:textSize="20sp"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/tv_catatan_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_note_value"
                android:textColor="#2E5E4E"
                android:textSize="20sp"
                android:layout_marginBottom="80dp" />

        </LinearLayout>

        <!-- BUTTON -->
        <Button
            android:id="@+id/btn_simpan_detail"
            android:layout_width="201dp"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/simpan"
            android:text="@string/button_save"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
